redid package.json again 9:18

--- a/week01/package.json
+++ b/week01/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wdd-341",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "week01/server.js", 
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node week01/server.js",  
+    "dev": "nodemon week01/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
