--- a/week01/package.json
+++ b/week01/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wdd-341",
   "version": "1.0.0",
-  "main": "week01/server.js", 
+  "main": "server.js",
   "scripts": {
-    "start": "node week01/server.js",  
-    "dev": "nodemon week01/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,5 +20,6 @@
     "nodemon": "^3.1.4"
   }
 }
+
 
 
