--- a/week01/package.json
+++ b/week01/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wdd-341",
   "version": "1.0.0",
-  "main": "server.js",  
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js", 
+    "start": "nodemon server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,3 @@
     "nodemon": "^3.1.4"
   }
 }
-
-
-
-
