--- a/contacts/package.json
+++ b/contacts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wdd-341",
+  "name": "CSE341",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -10,13 +10,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A simple API with Swagger documentation and MongoDB integration.",
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "swagger-autogen": "^2.23.7"
+  },
+  "nodemonConfig": {
+    "ignore": ["*.swp", "*.tmp", "node_modules/*", "dist/*", "swagger-output.json"]
   }
 }
+
+
+
